Move UAA to be behind gorouter
We had previously moved UAA to be behind its own, separate ELB. This
allowed us to firewall traffic using Security Groups such that requests
to the CF API must originate from a pre-defined set of IPs without also
restricting access to regular apps deployed on CF. We no longer are
required to restrict traffic by IP to the CF API.

In making this change we will change our deployment to be inline with
how CF is more typically deployed[1] as well as improving the
availability of UAA.

The UAA release currently relies on a health-check script in order to
deregister routes in gorouter when BOSH triggers the UAA job to
stop[2,3,4,5]. This has meant that we have had issues with availability
due to the mechanism UAA release uses to drain and deregister instances
during deployments as it relies on gorouter being used.

[1] https://github.com/cloudfoundry/cf-release/blob/b31611aaecacf6c42a8ed226ac7d42a0974fccdc/templates/cf.yml#L1409-L1422
[2] https://github.com/cloudfoundry/uaa-release/blob/02b5665138be409e16f7131ea5db6fe0615f6311/jobs/uaa/monit#L4
[3] https://github.com/cloudfoundry/uaa-release/blob/02b5665138be409e16f7131ea5db6fe0615f6311/jobs/uaa/templates/uaa_ctl.erb#L188
[4] https://github.com/cloudfoundry/uaa-release/blob/02b5665138be409e16f7131ea5db6fe0615f6311/jobs/uaa/templates/health_check#L15
[5] https://github.com/cloudfoundry/cf-release/blob/b31611aaecacf6c42a8ed226ac7d42a0974fccdc/templates/cf.yml#L1422

--- a/manifests/cf-manifest/manifest/010-cf-jobs.yml
+++ b/manifests/cf-manifest/manifest/010-cf-jobs.yml
@@ -150,6 +150,8 @@ meta:
     release: (( grab meta.release.name ))
   - name: statsd_injector
     release: (( grab meta.release.name ))
+  - name: route_registrar
+    release: cf
   - name: nginx
     release: nginx
 
@@ -247,6 +249,22 @@ jobs:
     networks:
       - name: cf
     properties:
+      route_registrar:
+        routes:
+          - name: uaa
+            port: (( grab properties.uaa.port ))
+            registration_interval: 4s
+            tags:
+              component: uaa
+            uris:
+            - (( concat "uaa." properties.system_domain ))
+            - (( concat "*.uaa." properties.system_domain ))
+            - (( concat "login." properties.system_domain ))
+            - (( concat "*.login." properties.system_domain ))
+            health_check:
+              name: uaa-healthcheck
+              script_path: /var/vcap/jobs/uaa/bin/health_check
+
       nginx_conf: |
         worker_processes  2;
         error_log syslog:server=127.0.0.1,severity=error,tag=uaa_nginx_error error;
