--- a/manifests/cf-manifest/cloud-config/020-cf-vm-types.yml
+++ b/manifests/cf-manifest/cloud-config/020-cf-vm-types.yml
@@ -51,6 +51,7 @@ vm_types:
         type: gp2
       elbs:
         - (( grab terraform_outputs.cf_router_elb_name ))
+        - (( grab terraform_outputs.cf_uaa_elb_name ))
 
 # Diego below
 
