Hack in access for Redis on rfc1918 addresses

--- a/manifests/cf-manifest/manifest/050-rds-broker.yml
+++ b/manifests/cf-manifest/manifest/050-rds-broker.yml
@@ -554,6 +554,9 @@ properties:
           - protocol: tcp
             destination: (( grab terraform_outputs.aws_backing_service_cidr_all ))
             ports: '3306'
+          - protocol: tcp
+            destination: (( grab terraform_outputs.aws_backing_service_cidr_all ))
+            ports: '6379'
 
     default_running_security_groups:
       - (( append ))
